base-apps/whoami-demo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-demo
  namespace: whoami-demo
  labels:
    app: whoami-demo
spec:
  type: ClusterIP
  selector:
    app: whoami-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
