base-apps/whoami-demo/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-demo
  namespace: whoami-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "73.7.190.154/32,170.85.56.189/32,170.85.130.202/32,104.28.177.82/32,10.0.0.0/8"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whoami.arigsela.com
      secretName: whoami-demo-tls
  rules:
    - host: whoami.arigsela.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-demo
                port:
                  number: 80
